@@ -37,6 +37,7 @@ K  5818	need simple way to override MIME type and encoding of attachment
 K  5819	enable RFC 2231 support by default
 K  5829	NullPointerException when accessing the content of a message attachment
 K  5830	IMAPProtocol.sasllogin uses old constructor for IMAPSaslAuthenticator
+K  5847	Exception when parsing bad address with unclosed quote in mail header
 
 
 		  CHANGES IN THE 1.4.6 RELEASE
